# arctis

./: .gitleaksignore  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml  requirements-lock.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  gitleaks.yml  release.yml
arctis_ghost/: init_demo.py
docs/: Deployment.md  Observability.md  Packaging.md  RELEASE.md  agent_prompt_plan_launch_a0_a4.md  arctis_ghost_demo_60.md  demo_60.md  demo_matrix.md  ghost_quickstart.md  security_production.md
docs/a5/: A5_CHECKLIST.md  README.md  engineering.md  feedback.md  roadmap.md  telemetry.md
docs/assets/: ghost_demo_flow_sample.txt
docs/customer/: README.md
docs/examples/: README.md  customer_execute_body.json
docs/pilot/: README.md  onboarding_call.md  pilot_checklist.md  pilot_scope.md  pilot_success.md  tenant_setup.md
tests/docs/: test_a5_md.py  test_demo_60_links.py  test_examples_customer_execute.py  test_observability_md.py  test_pilot_md.py
